# explorer_frontier

./: CMakeLists.txt  README.md  current_state.repos  install.sh  package.xml  setup.cfg  setup.py
explorer_frontier/: frontier_detection.py  navigator.py  single_pose_navigator.py
launch/: frontier_detection.launch.py
params/: frontier_detection.yaml
src/: frontier_detection.cpp
