<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>explorer_frontier</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gonzalezpobletefelipe@gmail.com">felipeipe</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-scikit-learn</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>python3-pip</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
